@startuml

circle          main

class Server
{
	- Config config_;
	- std::map<int, Socket*> sockets_;
	+ Server(const char *filepath);
}
class ServerSocket
{
	void Init();
	int GetListenFd();
}
class ClientSocket
{
	void Init();
	int GetFd();
	int EventHandler(bool is_readable, bool is_writable, Config &config);

}
class ConfigParser
{
	+ void ParseConfigFile(Config &config);
}
class Config
{
	- std::vector<ServerConfig> vec_server_config_;
	+ Config(const char *filepath);
	+ ServerConfig *getServerConfig(int port);
	+ std::vector<int> getServerPorts();

}
class ServerConfig
{
	std::vector<LocationConfig> vec_location_config_;
}
class LocationConfig
{

}
class	HttpRequest
{
	std::string method_;
	std::string uri_;
	std::string version_;
	std::string content_type_;
	size_t content_length_;
	bool is_bad_request_;
}
class	HttpRequestParser
{
	+ int Parse(const std::string recv_msg, HttpRequest &request);
}

class	HttpResponse
{
	+ HttpResponse(HttpRequest& request, ServerConfig *config);
	+ std::string getResponse();
}


main --> Server : configファイル名
Server o-- Config : configのこと\n何でも聞ける存在
Server o-- ServerSocket
Server o-- ClientSocket
ClientSocket --> HttpRequestParser : リクエストメッセージを渡すと\nHttpRequestを返してくれる
Config o-- ServerConfig
Config --> ConfigParser
ServerConfig o-- LocationConfig
ClientSocket --> HttpResponse : HttpRequestを渡すと\nレスポンス文字列を返してくれる


@enduml
